Added Basic authorization

--- a/example/get.html
+++ b/example/get.html
@@ -7,7 +7,7 @@
     <h1>RJ.get</h1>
     <ul id="people" class="list-unstyled"></ul>
 
-    <script src="/Users/smondal/sandip/project/rjxhr/dist/main.js"></script>
+    <script src="https://github.com/rejuvenationinc/rj-xhr/tree/master/dist/main.js"></script>
     <script>
       RjXhr.get('https://reqres.in/api/users/2')
         .then(function (response) {
